C/sofa.h



/* Astronomy/FundamentalArgs */
double iauFad03(double t);

double iauFae03(double t);

double iauFaf03(double t);

double iauFaju03(double t);

double iauFal03(double t);

double iauFalp03(double t);

double iauFama03(double t);

double iauFame03(double t);

double iauFane03(double t);

double iauFaom03(double t);

double iauFapa03(double t);

double iauFasa03(double t);

double iauFaur03(double t);

double iauFave03(double t);

void iauC2txy(double tta, double ttb, double uta, double utb,
              double x, double y, double xp, double yp,
              double rc2t[3][3]);

double iauEo06a(double date1, double date2);

double iauEors(double rnpb[3][3], double s);


/* Astronomy/RotationAndTime */
double iauEe00(double date1, double date2, double epsa, double dpsi);

double iauEe00a(double date1, double date2);

double iauEe00b(double date1, double date2);

double iauEe06a(double date1, double date2);

double iauEect00(double date1, double date2);

double iauEqeq94(double date1, double date2);

double iauEra00(double dj1, double dj2);